# slim-compose

./: LICENSE  README.md  build.sh  init.sh  publish.sh  pyproject.toml
examples/: slim-compose.json
src/: slim_compose.py
src/slim_compose/: args.py  main.py  utils.py
tests/: test.py
