[project]
name = "slim-compose"
version = "2.0.0"
description = "Simple management tool for podman pods, pure Python, no third-party dependencies."
authors = [
    {name = "xfoobar", email = ""},
]
dependencies = [
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

classifiers = [
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation",
    "License :: OSI Approved :: MIT License"
]
[project.scripts]
slim-compose = "slim_compose.main:main"
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.12.0",
    "autopep8>=2.0.2",
]
